# assets/swagger.json
@@ -5605,8 +5605,8 @@
           "$ref": "#/definitions/v1alpha1ApplicationSourcePlugin"
         },
         "ref": {
-          "type": "string",
-          "title": "Ref is reference to another source within sources field"
+          "description": "Ref is reference to another source within sources field. This field will not be used if used with a `source` tag.",
+          "type": "string"
         },
         "repoURL": {
           "type": "string",
@@ -7448,6 +7448,10 @@
         "status": {
           "type": "string"
         },
+        "syncWave": {
+          "type": "string",
+          "format": "int64"
+        },
         "version": {
           "type": "string"
         }
@@ -7517,8 +7521,8 @@
           "$ref": "#/definitions/v1Time"
         },
         "message": {
-          "type": "string",
-          "title": "Message contains the message associated with the revision, most likely the commit message.\nThe message is truncated to the first newline or 64 characters (which ever comes first)"
+          "description": "Message contains the message associated with the revision, most likely the commit message.",
+          "type": "string"
         },
         "signatureInfo": {
           "description": "SignatureInfo contains a hint on the signer if the revision was signed with GPG, and signature verification is enabled.",
